<resources>
    <string name="app_name">SpeckSensor</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_airquality">About Air Quality</string>
    <string name="action_about_speck">About Speck Sensor</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_trackers">Edit Trackers</string>
    <string name="action_login">Speck Login</string>
    <string name="title_activity_address_list">AddressListActivity</string>
    <string name="title_activity_address_show">AddressShowActivity</string>
    <string name="action_new">Add New</string>
    <string name="action_share">Share</string>
    <string name="title_activity_address_search">AddressSearchActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_about_speck">AboutSpeckActivity</string>
    <string name="title_activity_manage_trackers">Manage Trackers</string>
    <string name="title_activity_debug">Debug Menu</string>
    <string name="title_activity_aqi_explanation">AQI Explanation</string>
    <string name="title_activity_airnow">AirNow</string>
    <string name="title_activity_daily_tracker">Trends Over Time</string>
    <string-array name="trackers_spinner">
        <item>Mean</item>
        <item>Median</item>
        <item>Max</item>
    </string-array>
    <string-array name="trackers_spinner_scale">
        <item>EPA AQI</item>
        <item>WHO</item>
    </string-array>
    <string name="trakckers_dirty_days_description">Daily values are calculated from the 24-hour average of a given air station. This value is given in Air Quality Index (AQI) based off of PM 2.5 readings from the station. A day is considered dirty provided that its daily value exceeds 50 AQI.</string>
</resources>
