<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:activity="org.cmucreatelab.tasota.airprototype.activities.readable_list.ReadableListActivity">

    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new"
        app:showAsAction="always" />

    <item android:id="@+id/action_trackers" android:title="@string/action_trackers"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_about_airquality" android:title="@string/action_about_airquality"
        android:orderInCategory="300" app:showAsAction="never" />
    <item android:id="@+id/action_about_speck" android:title="@string/action_about_speck"
        android:orderInCategory="400" app:showAsAction="never" />
</menu>
